fix empty horizontal scroll

--- a/VectorLangDocs/wwwroot/css/app.css
+++ b/VectorLangDocs/wwwroot/css/app.css
@@ -30,11 +30,10 @@ a {
 
 main {
     background: var(--p-purple-1);
-
     padding: 1em;
 
     --header-margin: 5em;
-    width: 100vw;
+    width: 100%;
     height: calc(100vh - var(--header-margin));
     margin-top: 5em;
 }
